[gd_scene load_steps=10 format=3 uid="uid://cdoa4jmnijnyw"]

[ext_resource type="Script" path="res://scenes/ui/result_screen.gd" id="1_dpgtd"]
[ext_resource type="Texture2D" uid="uid://cegytscufu6eq" path="res://assets/ui/result/bg.png" id="1_qyai5"]
[ext_resource type="Texture2D" uid="uid://iwndtgnmjli4" path="res://assets/ui/result/data_bg.png" id="2_oe8w5"]
[ext_resource type="Texture2D" uid="uid://c4bt2qqcyy56r" path="res://assets/ui/result/home.png" id="3_hft63"]
[ext_resource type="Texture2D" uid="uid://dbegexhr7xmdh" path="res://assets/ui/result/next.png" id="4_p2mn6"]
[ext_resource type="Texture2D" uid="uid://dhtq85ia6312t" path="res://assets/ui/result/star.png" id="5_hvb2x"]
[ext_resource type="FontFile" uid="uid://dnbrn216ajivh" path="res://assets/fonts/animeace2_reg.ttf" id="6_1sbfx"]

[sub_resource type="LabelSettings" id="LabelSettings_h722h"]
font = ExtResource("6_1sbfx")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_ool7s"]
font = ExtResource("6_1sbfx")
font_size = 40

[node name="ResultScreen" type="CanvasLayer"]
script = ExtResource("1_dpgtd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qyai5")

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -443.0
offset_top = -301.5
offset_right = 443.0
offset_bottom = 301.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oe8w5")

[node name="HomeBtn" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
icon = ExtResource("3_hft63")
flat = true

[node name="NextBtn" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -153.0
offset_top = -145.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("4_p2mn6")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -201.0
offset_right = 336.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_hvb2x")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_hvb2x")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_hvb2x")
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Czas:"
label_settings = SubResource("LabelSettings_h722h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "00:00:000
"
label_settings = SubResource("LabelSettings_h722h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Lustra: "
label_settings = SubResource("LabelSettings_ool7s")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MirrorLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "2"
label_settings = SubResource("LabelSettings_ool7s")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/HomeBtn" to="." method="_on_home_btn_pressed"]
[connection signal="pressed" from="Control/NextBtn" to="." method="_on_next_btn_pressed"]
